🐛 Fix images being too wide

--- a/static/css/snuggle.css
+++ b/static/css/snuggle.css
@@ -515,7 +515,7 @@ ul.post-tags li {
 }
 
 #content p img {
-	width: 100%;
+	max-width: 50%;
 }
 
 .microblog_conversation { 
@@ -528,7 +528,7 @@ ul.post-tags li {
 }
 
 img {
-	max-width: 100%;
+	max-width: 50%;
 	border-radius: 5px;
 }
 
